# trustllo

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  ideas.md  log4rs.yaml
_architecture/: trustllo.excalidraw
src/: app.rs  config.rs  main.rs  store.rs  trello.rs  ui.rs  utils.rs
src/application/: app.rs
src/config/: config_manager.rs
src/domain/: entities.rs  logic.rs  mod.rs
src/infrastructure/: config_manager.rs  mod.rs
src/infrastructure/repositories/: api_repository.rs  im_memory_cache.rs  mod.rs
src/input/: keyboard.rs
src/persist/: store.rs
src/presentation/: ui.rs
src/presentation/input/: keyboard.rs
src/store/: data_provider.rs  store.rs
src/trello/: api.rs  api_connector.rs  mod.rs
src/ui/: cli.rs  layout.rs  terminal.rs
src/ui/widgets/: app_layout.rs  board.rs  card.rs  list.rs
src/utils/: fake_data.rs  logger.rs  mod.rs  types.rs
