[package]
name = "trustllo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
backtrace = "0.3.66"
crossterm = "0.25.0"
fake = { version = "2.5.0", features = ["uuid"] }
rand = "0.8.5"
log4rs = "1.2.0"
reqwest = {version="0.11.12",features=["json"]}
serde = {version="1.0.147",features=["derive"]}

serde_json = "1.0.87"
tokio = {version= "1.21.2", features =["full"] }
tui = "0.19.0"
log = "0.4.17"
futures = "0.3.25"
async-trait = "0.1.67"
